# Augustsson

./: README.md  augustsson.cabal  stack.yaml
src/: Main.hs  ParserLexer.hs  SimpleParser.hs
