name:                augustsson
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/rubenmoor/processor#readme
license:             BSD3
license-file:        LICENSE
author:              Ruben Moor
maintainer:          ruben.moor@gmail.com
copyright:           (c) 2016 Ruben Moor
category:            development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable processor-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       ParserLexer
                     , SimpleParser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , parsec
                     , text
                     , text-show
  default-language:    Haskell2010
  default-extensions: OverloadedStrings
